--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "eslint-plugin-vue": "^6.2.2",
     "vue": "^2.6.11"
   },
   "browserslist": [
@@ -20,9 +21,11 @@
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "eslint": "^7.1.0",
     "file-loader": "^6.0.0",
     "node-sass": "^4.5.3",
     "normalize-scss": "^7.0.1",
